samples/_failures_safe/1761165165_d5de5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b33f115.c: In function ‘main’:
./samples/SAFE/__tmp_1b33f115.c:140:18: error: expected ‘)’ at end of input
  140 |     if (input_len
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_1b33f115.c:140:5: error: expected declaration or statement at end of input
  140 |     if (input_len
      |     ^~
